[FIXED] fixed several unit test regressions